more dev changes

--- a/cmd/html/index.html
+++ b/cmd/html/index.html
@@ -24,267 +24,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 
-  <script>
-
-document.addEventListener("DOMContentLoaded", () => {
-
-    // create nodes on svg based on getNodes() function
-    const nodeData = mapPodsToNodes();
-
-    // create svg
-    const svg = d3.select("#visualization")
-        .append("svg")
-        .attr("width", window.innerWidth)
-        .attr("height", window.innerHeight);
-
-    console.log(nodeData)
-    // create a simple root node
-    const root = d3.hierarchy(nodeData)
-        .sum(computeSize);
-
-    // print root node
-    console.log("Root node",root)
-
-    // create a treemap with nodeData
-    const treemap = d3.treemap()
-        .size([window.innerWidth, window.innerHeight])
-        .paddingInner(10)
-        .paddingTop(2)
-        .paddingRight(2)
-        .paddingBottom(2)
-        .paddingLeft(2)
-        .round(2)
-        // .padding(0)
-        .tile(d3.treemapSquarify.ratio(1))(root)
-        // .tile(customTile)(root);
-
-
-    // print treemap
-    console.log("Treemap",treemap)
-    // console.log(treemap.leaves())    
-
-    // Create a <g> element to contain the treemap, center it
-    const g = svg.append("g")
-        .attr("transform", "translate(" + treemap.leaves()[0].x0 + "," + treemap.leaves()[0].y0 + ")");
-    // add nodes
-    g.selectAll("rect")
-    .data(treemap.descendants().slice(0))
-    .enter()
-    .append("rect")
-    .attr("x", (d) => {
-        // console.log(d.x0, d.x1);
-        // console.log(d)
-        return d.x0-0;
-    })
-    .attr("y", (d) => {
-        // console.log(d.y0, d.y1);
-        return d.y0-0;
-    })
-    .attr("width", (d) => (d.x1 - d.x0)+0)
-    .attr("height", (d) => (d.y1 - d.y0)+0)
-    .style("fill", (d) => {
-        // console.log("DATA type:", d);
-        if (d.depth === 0) {
-            return "lightblue"
-        }
-        return d.height === 1 ? "#03385c" : "#3568a3"
-    })
-    .attr("margin", (d) => {
-        if (d.depth === 0) {
-            return "0px"
-        }
-        return d.height === 1 ? "5px" : "10px"
-    });
-    // .style("stroke", "white");
-
-    // add pods
-    // g.selectAll("rect")
-    // .data(treemap.descendants())
-    // .enter()
-    // .append("rect")
-    // .attr("x", (d) => {
-    //     // console.log(d.x0, d.x1);
-    //     // console.log(d)
-    //     return d.x0-0;
-    // })
-    // .attr("y", (d) => {
-    //     // console.log(d.y0, d.y1);
-    //     return d.y0-0;
-    // })
-    // .attr("width", (d) => (d.x1 - d.x0)+0)
-    // .attr("height", (d) => (d.y1 - d.y0)+0)
-    // .style("fill", (d) => {
-    //     console.log("DATA type:", d);
-    //     return "#386c55"
-    // })
-    // .style("stroke", "white");
-
-        // add text for each pod
-    g.selectAll("text")
-    .data(treemap.leaves())
-    .enter()
-    .append("text")
-    .attr("x", (d) => d.x0 + 10)
-    .attr("y", (d) => d.y0 + 20)
-    .attr("font-size", "14px")
-    .attr("fill", "white")
-    .text((d) => d.data.name)
-
-    // print final treemap
-    console.log("Final treemap",treemap)
-
-});
-
-// function to map pods to nodes
-function mapPodsToNodes() {
-  const nodeData = getNodes();
-  const podData = getPods();
-
-  // Use d3.group to group pods by nodeName
-  const groupedPods = d3.group(podData.children, d => d.nodename);
-//   console.log("GroupedPods: ",groupedPods.get("node1"))
-//   console.log("GroupedPods: ",groupedPods)
-
-  // Loop through nodes and add pods to each node's children array
-  nodeData.children.forEach(node => {
-    const nodePods = groupedPods.get(node.name);
-    if (nodePods) {
-      node.children = nodePods;
-    } else {
-      node.children = [];
-    }
-  });
-
-  return nodeData;
-}
-
-// function to create custom tiling
-function customTile(node, x0, y0, x1, y1) {
-    // console.log('Processing node:', node);
-
-  if (node.children) {
-    // This is not a leaf node, return default tiling
-    // console.log("Root node, using default tiling");
-    return d3.treemapSquarify(node, x0, y0, x1, y1);
-  }
-
-  const ratio = node.data.size.memory*10 / node.data.size.cpu*20; // prioritize memory over CPU
-  const width = x1 - x0;
-  const height = y1 - y0;
-
-  if (width > height / ratio) {
-    const dx = (width - height / ratio) / 2;
-    return [x0 + dx, y0, x1 - dx, y1];
-  } else {
-    const dy = (height - width * ratio) / 2;
-    return [x0, y0 + dy, x1, y1 - dy];
-  }
-}
-
-function computeSize(node) {
-  if (!node.children) {
-    // check if node has a pod
-    // console.log("Computesize cpu: "+node.size.cpu, "memory: "+node.size.memory, "size: "+(node.size.cpu+node.size.memory)*10)
-    return (node.size.cpu+node.size.memory); // use CPU size as leaf node size
-  } else {
-    // console.log("Computesize else")
-    return node.children.reduce((acc, child) => acc + computeSize(child), 0);
-    // compute size of internal node as sum of child sizes
-  }
-}
-
-// function to fetch number of nodes
-function getNodes() {
-    return {
-        name: "nodes",
-        children: [
-            {
-            name: "node1",
-            size: {
-                cpu: 4,
-                memory: 8
-            }
-            },
-            {
-            name: "node2",
-            size: {
-                    cpu: 6,
-                    memory: 8
-                }
-            },
-            {
-            name: "node3",
-            size: {
-                    cpu: 2,
-                    memory: 6
-                }
-            },
-            {
-            name: "node4",
-            size: {
-                    cpu: 4,
-                    memory: 4
-                }
-            },
-            {
-            name: "node5",
-            size: {
-                cpu: 4,
-                memory: 4
-            }
-            }
-        ]
-    };
-}
-
-function getPods() {
-    return {
-        name: "pods",
-        children: [
-            {
-            name: "pod1",
-            nodename: "node1",
-            size: {
-                cpu: 0.4,
-                memory: 1
-            }
-            },
-            {
-            name: "pod2",
-            nodename: "node2",
-            size: {
-                    cpu: 1,
-                    memory: 2
-                }
-            },
-            {
-            name: "pod3",
-            nodename: "node3",
-            size: {
-                    cpu: 1.5,
-                    memory: 0.5
-                }
-            },
-            {
-            name: "pod4",
-            nodename: "node4",
-            size: {
-                    cpu: 2,
-                    memory: 2
-                }
-            },
-            {
-            name: "pod5",
-            nodename: "node3",
-            size: {
-                cpu: 1,
-                memory: 1
-            }
-        }
-        ]
-    }
-    };
-
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
